# automated-meeting-agent

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yaml  render.yaml
.github/: docker-build.yaml
backend/: .cache  .gitignore  README.md  Xq0CiuDe  captions (a.en).srt  captions.txt  llm-conversation.txt  main.py  pyproject.toml  sample_summary.txt
backend/app/: models.py
backend/app/api/: __init__.py  summarize.py  transcribe.py  update_notion_with_transcript_and_summary.py
backend/app/helpers/: build_evaluation_prompt.py  jumpshare_helper.py  llm_conversation_helper.py  spotify_helpers.py  text_extraction_helpers.py  youtube_helpers.py
backend/app/lib/: Env.py  notion.py
backend/app/services/: chunk_text.py  chunk_text_with_2000_char_limit_for_notion.py  eval_agent.py  get_openai_chat_response.py  get_youtube_captions_or_audio.py  html_docx_or_pdf_handler.py  jumpshare_handler.py  llm_conversation_handler.py  notion.py  old_eval_agent.py  parse_markdown_to_notion_blocks.py  punctuation_agent.py  spotify_handler.py  summarize.py  summary_eval_agent.py  transcribe.py  youtube.py  youtube_handler.py
backend/gold_standard_evals/: gold_standard_direct_quotes.txt  gold_standard_intro.txt  gold_standard_next_actions.txt  gold_standard_summary.txt  gold_standard_transcript.txt
backend/gold_standard_evals/gold_standard_eval_1/: gold_standard_summary_1.txt
backend/prompts/: direct_quotes.txt  intro.txt  llm_conversation_summary_prompt.txt  meeting_summary_prompt.txt  next_actions.txt  next_steps.txt  summary_prompt.txt
backend/prompts/prompt_boilerplate/: context.txt
frontend/: README.md  package-lock.json  package.json
frontend/src/routes/: +page.svelte
