[tool.poetry]
name = "meeting-transcription-assistant"
version = "0.1.0"
description = ""
authors = ["rainsound.ai <hello@rainsound.ai>"]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
python-dotenv = "^1.0.1"
pydantic = "^2.7.0"
pre-commit = "^3.7.0"
openai = "^1.50.2"
requests = "^2.32.3"
aiofiles = "^24.1.0"
tenacity = "^9.0.0"
apscheduler = "^3.10.4"

[tool.poetry.dependencies.uvicorn]
extras = ["standard"]
version = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
